# kovidore-data-generator

./: .env.example  .gitignore  LICENSE  PIPELINE.md  README.md  build_corpus.py  pyproject.toml  upload.py
prompts/: cross_section_summary.jinja  query_from_context.jinja  single_section_summary.jinja  summary.jinja
scripts/: run.sh
src/kovidore_data_generator/: cli.py  config.py  parser.py  utils.py
src/kovidore_data_generator/pipelines/: __init__.py  run_pipeline.py  summary.py
src/kovidore_data_generator/pipelines/filtering/: __init__.py  filter_false_negs.py
src/kovidore_data_generator/pipelines/query/: __init__.py  from_context.py  from_summary.py
src/kovidore_data_generator/pipelines/summary/: __init__.py  cross_section.py  single_section.py
src/kovidore_data_generator/preprocess/: __init__.py  preprocess_utils.py  run_preprocess.py
src/kovidore_data_generator/prompts/: __init__.py  cross_section_summary.py  false_negatives_filtering.py  query_from_context.py  query_from_summary.py  single_section_summary.py
