[project]
name = "kovidore-data-generator"
version = "1.0.0"
description = "Synthetic Data Generation Pipeline for KoViDoRe Benchmark"
authors = [{ name = "whybe-choi", email = "whybe.choi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data-designer>=0.2.1",
    "datasets>=4.0.0",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "tenacity>=8.0.0",
    "tqdm>=4.67.1",
]

[tool.uv]
package = true

[project.scripts]
kovidore-data-generator = "kovidore_data_generator.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.ruff]
line-length = 120
lint.fixable = ["ALL"]
lint.unfixable = ["F401"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
